# TDA_projects

./: .cursorrules  .dockerignore  .env.example  .gitignore  .jsonl  .mcp-test.json  .mcp.json  2025-08-10-claude-upgrades-with-sc-for-the-first-time.txt  A Review of Topological Data Analysis.md  ADVANCED_TDA_ENHANCEMENT_STRATEGY.md  CLEANUP_SUMMARY.md  CMakeLists.txt  CMakeLists.txt.simplified  CRITICAL_STEPS_COMPLETION.md  ChatGPT5NextPhase.md  DAILY_PROJECT_TRACKER.md  DISCREPANCY_ANALYSIS.md  Dockerfile  EXPERIMENT_LOG.md  GPT5THOUGHTS  GeminiNextPhase.md  HONEST_PROJECT_STATUS.md  HYBRID_TDA_RESULTS.md  METHODOLOGY_ASSESSMENT_TEMPLATE.md  METHODOLOGY_GRAVEYARD.md  MIGRATION_PLAN.md  NEXT_STEPS_STRATEGIC_PLAN.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_UPDATE.md  README.md  ROOT_FILE_ANALYSIS.md  SYNTHETIC_DATA_AUDIT_REPORT.md  TDA_AUTHORITATIVE_STATUS.md  TDA_BREAKTHROUGH_SUMMARY.md  TDA_IMPROVEMENT_STRATEGY.md  TDA_IMPROVEMENT_STRATEGY_SUMMARY.md  TDA_ML_Ideas.md  UNIFIED_AGENT_INSTRUCTIONS.md  VALIDATION_CRISIS_RESOLUTION.md  (+82 more)
.claude/: │ Task 3 Implementation Plan: Backend AP.ini
.cursor/: BUGBOT.md  cursor_restore_lost_context_for_c_23_mi.md
.github/: copilot-instructions.md
.specstory/: .project.json
.taskmaster/: config.json  state.json
archive/2025-08-12-original-project/automation/tda_deep_learning_research_pipeline_v2_crewai-project/: README.md  pyproject.toml
archive/2025-08-12-original-project/automation/tda_deep_learning_research_pipeline_v2_crewai-project/src/tda_deep_learning_research_pipeline/: crew.py
archive/2025-08-12-original-project/automation/tda_deep_learning_research_pipeline_v2_crewai-project/src/tda_deep_learning_research_pipeline/config/: agents.yaml  tasks.yaml
backend/: .env.example  README.md  UPLOAD_SYSTEM_README.md  pyproject.toml  test_kafka_integration.py  test_upload_integration.py
backend/.cursor/: BUGBOT.md
backend/api/.cursor/: BUGBOT.md
backend/docker/: README.md  SETUP_SUMMARY.md  docker-compose.flink.yml  docker-compose.kafka.yml  kafka.env
backend/docker/monitoring/: prometheus-flink.yml
backend/docker/scripts/: kafka-topics.sh  start-kafka.sh  stop-kafka.sh  validate-setup.sh
backend/flink/: README.md
backend/flink/config/: flink-conf.yaml
backend/flink/jobs/: sample-config.json  tda-analytics-job.py  tda-streaming-job.py
backend/flink/scripts/: setup-flink.sh  submit-job.sh
backend/kafka/: KAFKA_ARCHITECTURE.md  README.md
backend/kafka/config/: acl-config.yml  topics.yml
backend/kafka/monitoring/: Dockerfile.health-checker  Dockerfile.metrics-exporter  README.md  alerts.yml  deploy-monitoring.sh  docker-compose.monitoring.yml  grafana-dashboard.json  metrics-exporter.py  prometheus-config.yml  requirements-health-checker.txt  requirements-metrics-exporter.txt
backend/kafka/monitoring/config/: health-check.yml  metrics-exporter.yml
backend/kafka/scripts/: health-check.py  kafka-admin.py  topic-manager.py  topic-monitor.py
backend/scripts/: setup_env.sh
backend/tda_backend/: __init__.py  cli.py  config.py  main.py  models.py
backend/tda_backend/api/: __init__.py
backend/tda_backend/api/v1/: __init__.py  router.py  upload.py
backend/tda_backend/services/: __init__.py  flink_streams.py  job_orchestration.py  kafka_background_service.py  kafka_config.py  kafka_consumer.py  kafka_integration.py  kafka_metrics.py  kafka_producer.py  kafka_schemas.py  storage_service.py  tda_service.py  upload_service.py
cmake/: test_gudhi_eigen.cpp
configs/: dataset_cic.yaml
daily_logs/: 20250807_collins_network_structure_tda_implementation.md
docs/: README.md  build_matrix_summary.md  build_matrix_testing_summary.md
examples/: CMakeLists.txt.simplified  EXAMPLES_SUMMARY.md  README.md  apt_detection_example.py  vectorization_storage_example.cpp  vectorization_storage_example.md  vectorization_storage_example_simplified.cpp  vietoris_rips_demo.cpp
scripts/: build_matrix.sh  (+11 more)
src/cpp/: CMakeLists.txt  tda_platform.cpp  test_main.cpp
src/cpp/.cursor/: BUGBOT.md
src/cpp/algorithms/: adaptive_sampling.cpp  alpha_complex.cpp  alpha_complex_impl.hpp  cech_complex.cpp  dtm_filtration.cpp  simple_algorithms.cpp  sparse_rips.cpp  streaming_cech.cpp  streaming_vr.cpp  vietoris_rips.cpp  vietoris_rips_impl.cpp  vietoris_rips_main.cpp  witness_complex.cpp
src/cpp/benchmarks/: algorithm_benchmarks.cpp  vector_stack_benchmarks.cpp
src/cpp/core/: filtration.cpp  performance_profiler.cpp  persistent_homology.cpp  point_cloud.cpp  simple_core.cpp  simplex.cpp  simplex_pool.cpp  types.cpp
src/cpp/spatial/: balltree.cpp  kdtree.cpp  spatial_factory.cpp
src/cpp/storage/: mongodb_storage.cpp  postgresql_storage.cpp  storage_service.cpp
src/cpp/utils/: distance_matrix.cpp  memory_pool.cpp  performance_monitor.cpp  simd_utils.cpp  streaming_distance_cuda.cu  streaming_distance_matrix.cpp  thread_pool.cpp
src/cpp/vector_stack/: barcode.cpp  betti_numbers.cpp  persistence_diagram.cpp  persistence_utils.cpp  vector_operations.cpp  vector_stack.cpp
src/cpp/vectorization/: betti_curve.cpp  persistence_image.cpp  persistence_landscape.cpp  vectorizer_registry.cpp
tests/: CMakeLists.txt  conftest.py  test_core.py  test_cpp23_working_features.cpp  test_cybersecurity.py  test_finance.py  test_performance_benchmarks.cpp
tests/cpp/: CMakeLists.txt  test_cech_pool_integration.cpp  test_distance_matrix.cpp  test_dtm_pool_integration.cpp  test_full_pipeline.cpp  test_gpu_sanity.cpp  test_manifest_presence.cpp  test_mathematical_validation.cpp  test_perf_baseline_jsonl.cpp  test_perf_monotonicity.cpp  test_result.cpp  test_simplex_pool.cpp  test_sparse_rips.cpp  test_st101_memory_optimized.cpp  test_streaming_cech.cpp  test_streaming_cech_perf.cpp  test_streaming_distance_earlystop.cpp  test_streaming_distance_matrix.cpp  test_streaming_distance_telemetry.cpp  test_streaming_vr_parity.cpp  test_telemetry_presence.cpp  test_vietoris_rips.cpp  test_vr_adj_hist_presence.cpp  test_vr_minimal.cpp  test_vr_telemetry_presence.cpp
tests/python/: CMakeLists.txt
tests/tda/: test_diagram_vectorizers.py
(+9967 files in other folders)
